// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::DateFilter snapshot shows a warning for April 2017 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-label="Hide Date CFPB received the complaint filter"
    className="o-expandable_header o-expandable_target o-expandable_target__expanded"
    onClick={[Function]}
  >
    <h3
      className="h4 o-expandable_header-left o-expandable_label"
    >
      Date CFPB received the complaint
    </h3>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <span
        className="o-expandable_cue o-expandable_cue-close"
      >
        <span
          className="u-visually-hidden-on-mobile"
        >
          Hide
        </span>
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p />
    <div>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-from"
          >
            From
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="date_received-from"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2016-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received from filter
              </span>
            </button>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-through"
          >
            Through
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="date_received-through"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2018-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received through filter
              </span>
            </button>
          </div>
        </li>
      </ul>
      <section
        className="date-ranges m-btn-group"
      >
        <p>
          Date range (Click to modify range)
        </p>
        <button
          className="a-btn date-selector range-3m"
          onClick={[Function]}
        >
          3m
        </button>
        <button
          className="a-btn date-selector range-6m"
          onClick={[Function]}
        >
          6m
        </button>
        <button
          className="a-btn date-selector range-1y"
          onClick={[Function]}
        >
          1y
        </button>
        <button
          className="a-btn date-selector range-3y"
          onClick={[Function]}
        >
          3y
        </button>
        <button
          className="a-btn date-selector range-all"
          onClick={[Function]}
        >
          All
        </button>
      </section>
      <p
        className="u-mt15"
      >
         
        CFPB updated product and issue options in April 2017 and August 2023
        <a
          aria-label="Learn more about Product and Issue changes (opens in new window)"
          href="https://www.consumerfinance.gov/data-research/consumer-complaints/#past-changes"
          rel="noopener noreferrer"
          target="_blank"
        >
           
          Learn More
        </a>
      </p>
    </div>
  </div>
</section>
`;

exports[`component::DateFilter snapshot shows errors 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-label="Hide Date CFPB received the complaint filter"
    className="o-expandable_header o-expandable_target o-expandable_target__expanded"
    onClick={[Function]}
  >
    <h3
      className="h4 o-expandable_header-left o-expandable_label"
    >
      Date CFPB received the complaint
    </h3>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <span
        className="o-expandable_cue o-expandable_cue-close"
      >
        <span
          className="u-visually-hidden-on-mobile"
        >
          Hide
        </span>
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p />
    <div>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-from"
          >
            From
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input a-text-input__error"
              id="date_received-from"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2016-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received from filter
              </span>
            </button>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-through"
          >
            Through
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input a-text-input__error"
              id="date_received-through"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2000-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received through filter
              </span>
            </button>
          </div>
        </li>
      </ul>
      <section
        className="date-ranges m-btn-group"
      >
        <p>
          Date range (Click to modify range)
        </p>
        <button
          className="a-btn date-selector range-3m"
          onClick={[Function]}
        >
          3m
        </button>
        <button
          className="a-btn date-selector range-6m"
          onClick={[Function]}
        >
          6m
        </button>
        <button
          className="a-btn date-selector range-1y"
          onClick={[Function]}
        >
          1y
        </button>
        <button
          className="a-btn date-selector range-3y"
          onClick={[Function]}
        >
          3y
        </button>
        <button
          className="a-btn date-selector range-all"
          onClick={[Function]}
        >
          All
        </button>
      </section>
      'From' date must be less than 'through' date 
      <span
        aria-hidden="true"
      >
        <svg
          className="cf-icon-svg cf-icon-delete-round"
        >
          error-round.svg
        </svg>
      </span>
      <p
        className="u-mt15"
      >
         
        CFPB updated product and issue options in April 2017 and August 2023
        <a
          aria-label="Learn more about Product and Issue changes (opens in new window)"
          href="https://www.consumerfinance.gov/data-research/consumer-complaints/#past-changes"
          rel="noopener noreferrer"
          target="_blank"
        >
           
          Learn More
        </a>
      </p>
    </div>
  </div>
</section>
`;

exports[`component::DateFilter snapshot supports no dates in the Redux Store 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-label="Hide Date CFPB received the complaint filter"
    className="o-expandable_header o-expandable_target o-expandable_target__expanded"
    onClick={[Function]}
  >
    <h3
      className="h4 o-expandable_header-left o-expandable_label"
    >
      Date CFPB received the complaint
    </h3>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <span
        className="o-expandable_cue o-expandable_cue-close"
      >
        <span
          className="u-visually-hidden-on-mobile"
        >
          Hide
        </span>
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p />
    <div>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-from"
          >
            From
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="date_received-from"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="Invalid Date"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received from filter
              </span>
            </button>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-through"
          >
            Through
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="date_received-through"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="Invalid Date"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received through filter
              </span>
            </button>
          </div>
        </li>
      </ul>
      <section
        className="date-ranges m-btn-group"
      >
        <p>
          Date range (Click to modify range)
        </p>
        <button
          className="a-btn date-selector range-3m"
          onClick={[Function]}
        >
          3m
        </button>
        <button
          className="a-btn date-selector range-6m"
          onClick={[Function]}
        >
          6m
        </button>
        <button
          className="a-btn date-selector range-1y"
          onClick={[Function]}
        >
          1y
        </button>
        <button
          className="a-btn date-selector range-3y"
          onClick={[Function]}
        >
          3y
        </button>
        <button
          className="a-btn date-selector range-all"
          onClick={[Function]}
        >
          All
        </button>
      </section>
      <p
        className="u-mt15"
      >
         
        CFPB updated product and issue options in April 2017 and August 2023
        <a
          aria-label="Learn more about Product and Issue changes (opens in new window)"
          href="https://www.consumerfinance.gov/data-research/consumer-complaints/#past-changes"
          rel="noopener noreferrer"
          target="_blank"
        >
           
          Learn More
        </a>
      </p>
    </div>
  </div>
</section>
`;
